--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-query": "^3.39.2"
