--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
@@ -21,6 +22,7 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-use-keyboard-height": "^0.1.1",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
