--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -14,7 +14,6 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
@@ -23,7 +22,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-use-keyboard-height": "^0.1.1",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-query-firestore": "^0.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
