--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-use-keyboard-height": "^0.1.1",
+    "react-native-webview": "^11.26.0",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
