--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
+    "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "react": "18.1.0",
